[gd_scene load_steps=13 format=2]

[ext_resource path="res://HangedMan.gd" type="Script" id=1]
[ext_resource path="res://assets/assets/blackboard.jpg" type="Texture" id=2]
[ext_resource path="res://assets/assets/Feltpen.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/assets/blue_button11.png" type="Texture" id=4]
[ext_resource path="res://assets/assets/blue_button12.png" type="Texture" id=5]
[ext_resource path="res://assets/assets/stage0.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 26
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 149.816, 196.792 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 3 )

[node name="HangedMan" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.814514
margin_top = 2.44351
margin_right = 0.814453
margin_bottom = 2.44348
rect_scale = Vector2( 1.00091, 0.996818 )
script = ExtResource( 1 )

[node name="BackGround" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1023.0
margin_bottom = 57.0

[node name="numTries" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_right = 164.0
margin_bottom = 57.0
rect_pivot_offset = Vector2( -0.435194, -0.953645 )
custom_fonts/font = SubResource( 2 )
text = "wordless"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetLabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 168.0
margin_top = 7.0
margin_right = 168.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 6 )

[node name="inputBox" type="LineEdit" parent="VBoxContainer/HBoxContainer2"]
margin_left = 172.0
margin_right = 338.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 4 )
max_length = 1

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/HBoxContainer2"]
margin_left = 342.0
margin_right = 391.0
margin_bottom = 57.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="VBoxContainer"]
editor/display_folded = true
position = Vector2( 95.4105, 100.84 )
scale = Vector2( 1, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="VBoxContainer/Area2D"]
position = Vector2( 102.229, 137.002 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="VBoxContainer/Area2D"]
position = Vector2( 102.434, 137.825 )
shape = SubResource( 5 )

[node name="GameStatus" type="Label" parent="VBoxContainer"]
margin_top = 61.0
margin_right = 1023.0
margin_bottom = 109.0
custom_fonts/font = SubResource( 3 )

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
margin_top = 113.0
margin_right = 1023.0
margin_bottom = 113.0

[node name="guessWord" type="Label" parent="VBoxContainer"]
margin_top = 117.0
margin_right = 1023.0
margin_bottom = 180.0
rect_pivot_offset = Vector2( -0.435194, -0.953645 )
custom_fonts/font = SubResource( 1 )
text = "wordless"
[connection signal="text_entered" from="VBoxContainer/HBoxContainer2/inputBox" to="." method="_on_inputBox_text_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/TextureButton" to="." method="_on_TextureButton_pressed"]
